# flatland-rl

./: Makefile  environment.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
benchmarks/: flatland3_round2.py  ray_training.py  ray_utils.py
examples/: custom_observation_example_01_SimpleObs.py  custom_observation_example_02_SingleAgentNavigationObs.py  custom_observation_example_03_ObservePredictions.py  flatland_3_0_example.py
flatland/contrib/interface/: flatland_env.py
flatland/contrib/policies/: DeadlockAvoidancePolicy.py
flatland/contrib/policies/utils/: deadlock_avoidance_policy.py  shortest_distance_walker.py
flatland/core/: env.py  env_observation_builder.py
flatland/envs/: flatten_tree_observation_for_rail_env.py  observations.py  rail_env.py  rail_env_wrappers.py
flatland/policy/: random_policy.py
flatland/utils/: decorators.py
tests/: test_eval_timeout.py  test_flatland_malfunction.py  test_rail_env_wrappers.py
